k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quacker-frontend
spec:
  selector:
    matchLabels:
      app: quacker-frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: quacker-frontend
    spec:
      containers:
        - name: quacker-frontend
          image: quackernl/quacker-frontend:latest
          imagePullPolicy: 'Always'
          ports:
            - containerPort: 80
