k8s/quacker-frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: quacker-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: quacker-frontend
