k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: quacker-frontend
  namespace: default
  labels:
    app: quacker-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: quacker-frontend
