k8s/frontend-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quacker-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - quacker.nl
        - www.quacker.nl
      secretName: quacker.nl-tls
  rules:
    - host: 'quacker.nl'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: quacker-frontend
                port:
                  number: 80
    - host: 'www.quacker.nl'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: quacker-frontend
                port:
                  number: 80
